# blobdrop

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  flake.nix  icons.qrc
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
assets/completions/bash-completion/completions/: blobdrop
assets/completions/fish/vendor_completions.d/: blobdrop.fish
assets/completions/zsh/site-functions/: _blobdrop
doc/: Doxyfile
doc/man/man1/: blobdrop.1
scripts/: build-appimage.sh  build.sh  format-code.sh
src/: backend.cpp  backend.hpp  getopts.cpp  getopts.hpp  main.cpp  mimedb.cpp  mimedb.hpp  path.cpp  path.hpp  path_registry.cpp  path_registry.hpp  remote.cpp  remote.hpp  settings.cpp  settings.hpp  signals.cpp  signals.hpp  stdin.cpp  stdin.hpp  stdout.cpp  stdout.hpp  version.cpp  version.hpp  xcb.cpp  xcb.hpp
src/Models/: path_model.cpp  path_model.hpp
src/Util/: util.cpp  util.hpp
src/qml/: DragArea.qml  Main.qml  PathView.qml  Wave.qml  Welcome.qml  main.qml
src/qml/Blobdrop/: Main.qml  PathView.qml  Welcome.qml
tests/: CMakeLists.txt  README.md  path_test.cpp
